I kind of fixed issues that came with the menu system... realized that to properly scale the placeholder image until the GIF loads I will have to to a screen shot of every single gif... too much work... moving on

--- a/react/portfolio/src/styles.css
+++ b/react/portfolio/src/styles.css
@@ -10,6 +10,11 @@ a {
   text-decoration: none;
 }
 
+.disableScroll{
+  overflow-y:hidden;
+  overflow-x:hidden;
+}
+
 /* Position and sizing of burger button */
 .bm-burger-button {
   z-index: 999 !important;
